--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -32,11 +32,11 @@
             <label for="InputCollectionId" class="form-label">Collection ID</label>
             <input type="text" rows="2" class="form-control" name="collectionId" id="collectionId" placeholder="e.g. 50" required>
           </div>
-
-          <div id="generateURL" class="mb-3">
-          </div>
-          
-          <div id="URLValue" class="form-text"></div>
+        
+          <div id="generatedUrl" class="alert alert-dark alert-dismissible fade d-none" role="alert">
+            <strong>Grenerated - </strong><span id="generatedUrlText"></span>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>                 
 
           <button type="submit" id="submitButton" class="btn btn-dark mt-3 float-end">Submit</button>
 
@@ -47,20 +47,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.getElementById('urlForm').addEventListener('submit', function(event) {
-          event.preventDefault(); // prevent form submission
-          var chainId = document.getElementById('chain').value;
-          var collectionId = document.getElementById('collectionId').value;
-          var baseUrl = 'https://unifrog.uniframe.workers.dev/';
-          var url = baseUrl + 'gallery/' + chainId + '/' + collectionId;
-          document.getElementById('URLValue').innerText = url;
-      
-          // Redirect to the generated URL with the added text
-          var castIntens = 'https://warpcast.com/~/compose?text=';
-          var castUrl = castIntens + encodeURIComponent(url);
-          setTimeout(function() {
-            window.location.href = castUrl;
-          }, 3000); 
-        });
+            event.preventDefault(); // prevent form submission
+            var chainId = document.getElementById('chain').value;
+            var collectionId = document.getElementById('collectionId').value;
+            var baseUrl = 'https://unifrog.uniframe.workers.dev/';
+            var url = baseUrl + 'gallery/' + chainId + '/' + collectionId;
+            document.getElementById('generatedUrlText').innerText = url;
+          
+            // Show the generated URL
+            var generatedUrlDiv = document.getElementById('generatedUrl');
+            generatedUrlDiv.classList.remove('d-none');
+            generatedUrlDiv.classList.add('show');
+            generatedUrlDiv.classList.add('fade');
+          
+            // Redirect to the generated URL with the added text
+            var castIntens = 'https://warpcast.com/~/compose?text=';
+            var castUrl = castIntens + encodeURIComponent(url);
+            setTimeout(function() {
+              window.location.href = castUrl;
+            }, 5000); 
+          });                            
     </script>      
   </body>
   <footer class="footer mt-auto py-3">
